--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Eduardogr.GitHub.io</h1>
+        <h1 id="project_title">Welcome to the EduardoGR’s homepage!</h1>
+        <h2 id="project_tagline">Feel free to bookmark this to keep an eye on my projects updates.</h2>
         <p></p>
 
 
