--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="wrapper">
       <header>
         <h1 id="project_title">Welcome to the EduardoGR’s homepage!</h1>
-        <a href="http://stackoverflow.com/users/4856526/edugr?theme=dark">
-        <img src="http://stackoverflow.com/users/flair/4856526.png" width="208" height="58" alt="profile for EduGR at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for EduGR at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+        <a href="http://stackoverflow.com/users/4856526/edugr">
+        <img src="http://stackoverflow.com/users/flair/4856526.png?theme=dark" width="208" height="58" alt="profile for EduGR at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for EduGR at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
         </a>
         <h2 id="project_tagline">Feel free to bookmark this to keep an eye on my projects updates.</h2>
         <p></p>
