--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 id="project_title">Welcome!</h1>
-        <a href="http://stackoverflow.com/users/4856526/edugr">
-        <img src="http://stackoverflow.com/users/flair/4856526.png?theme=dark" width="208" height="58" alt="profile for EduGR at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for EduGR at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
-        </a>
+        <h1 id="project_title">Welcome to EduardoGR's page!</h1>
         <p></p>
 
 
