--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
       </header>
       <section>
         <h3>
-<a id="Repositories" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="Repositories" class="anchor" href="#Repositories" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 <ul>
   <li><a href="http://eduardogr.github.io/ESXi-tools/">ESXi-tools</a></li>
-  <li>Understanding-Monads</li>
-  <li>Milk</li>
+  <li><a href="http://eduardogr.github.io/Understanding-Monads/">Understanding-Monads</a></li>
 </ul>
 
 <h3>
