--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <ul>
   <li><a href="http://eduardogr.github.io/ESXi-tools/">ESXi-tools</a></li>
   <li><a href="http://eduardogr.github.io/Understanding-Monads/">Understanding-Monads</a></li>
-  <li><a href="http://eduardogr.github.io/SII-Emasa/">SII-Emasa</a></a></li>
+  <li><a href="http://eduardogr.github.io/SII-Emasa/">SII-Emasa</a></li>
 </ul>
 
 <h3>
