--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Eduardogr.GitHub.io by EduardoGR</title>
+    <title>eduardogr.gitHub.io by eduardogr</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -19,7 +19,7 @@
         <p></p>
 
 
-        <p class="view"><a href="https://github.com/EduardoGR">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://github.com/eduardogr">View My GitHub Profile</a></p>
 
       </header>
       <section>
